<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@+id/mobile_navigation"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="ru.volgadev.wifienvscanner.ui.newticket.NewTicketFragment"
        android:label="@string/title_scanner"
        tools:layout="@layout/fragment_new_ticket" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.volgadev.wifienvscanner.ui.login.LoginFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ru.volgadev.wifienvscanner.ui.tickets.TicketsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_tickets" />
</navigation>